# uxibxx-io-board

./: .gitmodules  LICENSE  README.md
driver/: README.md  fbibxx.py  pyproject.toml  setup.py  uxibxx.py
driver/docs/: conf.py  index.rst
driver/uxibxx/: __init__.py  _driver.py  types.py
firmware/: .gitignore  LICENSE  makefile
firmware/src/: board_info.h  cmdproc.c  cmdproc.h  commands.c  gpio.c  gpio.h  main.c  mstick.c  mstick.h  nvparams.c  nvparams.h  statusleds.c  statusleds.h  usbcdc.c  usbcdc.h  usbcdc_config.h  usbcdc_descriptors.c
pcb/: README.txt  soldriver.kicad_pcb  soldriver.kicad_pro  soldriver.kicad_sch  sym-lib-table
pcb/footprints.pretty/: CONN_2601-1102_WAG.kicad_mod  CON_1726480102.kicad_mod  CUI_PJ-102AH_with3dmodel.kicad_mod  biohub_logo_9mm_silk.kicad_mod  fuse_1206_jumperable.kicad_mod  molex_705510001_or_2pos_5mm_tb.kicad_mod  molex_705510001_or_wago_2601-1102_lh.kicad_mod  molex_705510001_or_wago_2601-1102_rh.kicad_mod  promicro_in_socket.kicad_mod
pcb/sym/: molex_0705510001.kicad_sym  molex_1726480102.kicad_sym  symbols.kicad_sym  wago_2601-1102.kicad_sym
