[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["uxibxx"]

[project]
name = "uxibxx-io-board"
version = "0.1.1"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [{name = "Greg Courville", email = "greg.courville@czbiohub.org"}]
maintainers = [{name = "Greg Courville", email = "greg.courville@czbiohub.org"}]
dependencies = ["pyserial>=3.5"]

[project.optional-dependencies]
docs = ["sphinx"]
